--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,11 +1,10 @@
 
 body {
   background-color: #f2f2f2;
-    font-family: "Lato";
+    font-family: "Roboto";
     font-weight: 300;
     font-size: 16px;
     color: #555;
-    padding-top: 50px;
 
     -webkit-font-smoothing: antialiased;
     -webkit-overflow-scrolling: touch;
@@ -13,7 +12,7 @@ body {
 
 /* Titles */
 h1, h2, h3, h4, h5, h6 {
-    font-family: "Raleway";
+    font-family: "Roboto";
     font-weight: 300;
     color: #333;
 }
