--- a/dev/app/css/main.css
+++ b/dev/app/css/main.css
@@ -1,5 +1,5 @@
 body {
-	background-color: #fff;
+	background-color: #607d8b;
 	color: #4C6A92;
 	overflow-x: hidden !important;
 }
@@ -16,9 +16,10 @@ button {
 }
 
 .page-header {
-	margin-top: 30px;
+	margin-top: 15px;
 	margin-left: 30px;
 	margin-bottom: 10px;
+	color: #fff;
 }
 
 .container {
@@ -79,12 +80,13 @@ button {
 .close {
 	/*margin-top: 5px;*/
 	margin-right: 10px;
-	color: #bbb;
+	margin-top: 5px;
+	color: #fff;
 	opacity: 1 !important;
 }
 
 .close:hover {
-	color: #bbb !important;
+	color: #fff !important;
 	opacity: 1 !important;
 }
 
