default bootstrap temaya geçildi

--- a/dev/app/css/main.css
+++ b/dev/app/css/main.css
@@ -1,6 +1,6 @@
 body {
-	background-color: #607d8b;
-	color: #4C6A92;
+	background-color: #fff;
+	color: #3F729B;
 	overflow-x: hidden !important;
 }
 
@@ -15,11 +15,20 @@ button {
 	/*-webkit-app-region: no-drag;*/
 }
 
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    background-color: #f5f5f5;
+	text-align: center;
+	padding-top: 10px;
+}
+
 .page-header {
-	margin-top: 15px;
+	margin-top: 30px;
 	margin-left: 30px;
 	margin-bottom: 10px;
-	color: #fff;
 }
 
 .container {
@@ -51,10 +60,11 @@ button {
 
 .card {
 	cursor: pointer;
+	color: #3F729B;
 }
 
 .card-block {
-	min-height: 105px
+	min-height: 105px;
 }
 
 .card-text {
@@ -80,13 +90,12 @@ button {
 .close {
 	/*margin-top: 5px;*/
 	margin-right: 10px;
-	margin-top: 5px;
-	color: #fff;
+	color: #bbb;
 	opacity: 1 !important;
 }
 
 .close:hover {
-	color: #fff !important;
+	color: #bbb !important;
 	opacity: 1 !important;
 }
 
@@ -94,4 +103,9 @@ button {
 	margin-top: 10px;
 	margin-bottom: 10px;
 	border-top: 2px solid #4C6A92;
+}
+
+.exchange-button {
+	text-align: center;
+	padding-top: 10px;
 }
